[project]
name = "synapse-p2p"
dynamic = ["version"]
description = "A rapid RPC framework for building p2p networks"
readme = "README.md"
authors = [{ name = "Daniel van Flymen", email = "vanflymen@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "loguru",
    "msgpack",
]

[project.urls]
Homepage = "https://github.com/dvf/synapse"

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-sugar",
    "pyrefly",
    "ruff",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["synapse_p2p"]

[tool.uv-dynamic-versioning]
vcs = "git"
fallback-version = "0.0.0"
style = "semver"
pattern = "default-unprefixed"
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["synapse_p2p/tests"]

[tool.pyrefly]
project-includes = ["synapse_p2p", "example_client.py", "example_server.py"]
project-excludes = ["**/__pycache__", ".venv", ".ruff_cache", ".pytest_cache"]
