[project]
name = "synapse-p2p"
dynamic = ["version"]
description = "A language-agnostic network substrate for agent-to-agent collaboration"
readme = "README.md"
license = "MIT"
keywords = ["agents", "agent-to-agent", "multi-agent", "rpc", "p2p", "msgpack", "substrate"]
authors = [{ name = "Daniel van Flymen", email = "vanflymen@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "astral>=3.2",
    "croniter>=6.0",
    "loguru",
    "msgpack",
    "rich>=13",
    "typer>=0.20",
    "zeroconf>=0.147",
]

[project.urls]
Homepage = "https://github.com/dvf/synapse"

[project.scripts]
sn = "synapse_p2p.cli:app"

[dependency-groups]
dev = [
    "pydantic-ai>=1.32",
    "pyrefly>=1.0.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-sugar",
    "pyrefly",
    "ruff",
]

[project.optional-dependencies]
examples = ["pydantic-ai>=1.32"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["synapse_p2p"]

[tool.uv-dynamic-versioning]
vcs = "git"
fallback-version = "0.0.0"
style = "semver"
pattern = "default-unprefixed"
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["synapse_p2p/tests"]

[tool.pyrefly]
project-includes = ["synapse_p2p", "examples"]
project-excludes = ["**/__pycache__", ".venv", ".ruff_cache", ".pytest_cache"]
